use more efficient float/double -> Float/Double conversion